chore: add readme
