# docs/swagger/swagger.yaml
@@ -164,6 +164,28 @@ paths:
       summary: Delete a todo
       tags:
       - Todo
+    get:
+      consumes:
+      - application/json
+      description: Read a todo
+      parameters:
+      - description: Todo ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Todo'
+      security:
+      - Bearer: []
+      summary: Read a todo
+      tags:
+      - Todo
     put:
       consumes:
       - application/json
